Adding changes to script

--- a/bike_share_austin_analysis.ipynb
+++ b/bike_share_austin_analysis.ipynb
@@ -34,19 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbuser=\"mariaalejandragomez\"\n",
-    "dbpassword=\"\"\n",
     "\n",
     "rds_connection_string = f\"{dbuser}:{dbpassword}@localhost:5432/bike_share_df2\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -208,13 +199,6 @@
     "trips_df = pd.read_csv(bike_file)\n",
     "trips_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -926,6 +910,15 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "stations_df = stations_df[(stations_df.status !='closed') & (stations_df.status != 'moved') & (stations_df.status != 'ACL only')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1015,7 +1008,6 @@
     }
    ],
    "source": [
-    "stations_df = stations_df[(stations_df.status !='closed') & (stations_df.status != 'moved') & (stations_df.status != 'ACL only')]\n",
     "stations_df.head()"
    ]
   },
@@ -1146,6 +1138,16 @@
     "# Merging dataframes\n",
     "bike_share_df = pd.merge(new_trips_df, stations_df, left_on='end_station_id', right_on='station_id')\n",
     "bike_share_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trips_cols2 = [\"duration_minutes\", \"end_station_id\", \"end_station_name\", \"year\", \"station_id\"]\n",
+    "bike_share_df2= bike_share_df[trips_cols2].copy()"
    ]
   },
   {
@@ -1311,8 +1313,6 @@
     }
    ],
    "source": [
-    "trips_cols2 = [\"duration_minutes\", \"end_station_id\", \"end_station_name\", \"year\", \"station_id\"]\n",
-    "bike_share_df2= bike_share_df[trips_cols2].copy()\n",
     "bike_share_df2"
    ]
   },
@@ -1349,27 +1349,6 @@
    "source": [
     "bike_share_df2.to_sql('bike_share_df2', con=engine, if_exists='append', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
